--- a/app/src/main/res/layout/layout_listitem_episodes.xml
+++ b/app/src/main/res/layout/layout_listitem_episodes.xml
@@ -10,6 +10,7 @@
     android:layout_margin="@dimen/dimen.0.25.x">
 
     <RelativeLayout
+        android:id="@+id/episode_relative"
         android:layout_width="match_parent"
         android:layout_marginStart="@dimen/_16sdp"
         android:layout_marginEnd="@dimen/_16sdp"
