--- a/app/src/main/res/layout/library_playlist_list_items.xml
+++ b/app/src/main/res/layout/library_playlist_list_items.xml
@@ -67,7 +67,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="@dimen/_17sdp"
                 android:background="@drawable/library_add_background"
-                android:text=" Add to playlist "
+                android:text="@string/add_to_playlist"
                 android:drawableStart="@drawable/ic_add_green"
                 android:gravity="center"
                 android:visibility="visible"
@@ -83,7 +83,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="@dimen/_17sdp"
                 android:background="@drawable/viewall_background"
-                android:text=" Added to playlist "
+                android:text="@string/added_to_playlist"
                 android:gravity="center"
                 android:visibility="gone"
                 android:textColor="@color/md_white_1000"
