--- a/app/src/main/res/layout/activity_dashboad_new.xml
+++ b/app/src/main/res/layout/activity_dashboad_new.xml
@@ -122,9 +122,8 @@
 
                 </lk.mobilevisions.kiki.audio.util.SlidingUpPanelLayoutOne>
 
-
-
                 <RelativeLayout
+                    android:id="@+id/bottom_tab_layout"
                     android:layout_width="0dp"
                     android:layout_height="60dp"
                     android:background="@color/backgroundColorTab"
@@ -195,6 +194,19 @@
 
 
                 </com.google.android.material.tabs.TabLayout>
+
+                <FrameLayout
+                    android:id="@+id/frame_container_search"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/toolbar"
+
+                    android:visibility="visible">
+
+                </FrameLayout>
 
 
             </androidx.constraintlayout.widget.ConstraintLayout>
