--- a/app/src/main/res/drawable/rounded_corner_background_try_now.xml
+++ b/app/src/main/res/drawable/rounded_corner_background_try_now.xml
@@ -2,8 +2,8 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="#ffffff"/>
-            <corners android:radius="6dp" />
+            <solid android:color="@color/colorPrimary"/>
+            <corners android:radius="12dp" />
         </shape>
     </item>
 </selector>
