--- a/app/src/main/res/layout/fragment_artist_list.xml
+++ b/app/src/main/res/layout/fragment_artist_list.xml
@@ -7,6 +7,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:clickable="true"
     android:background="#1A1A1A">
 
     <lk.mobilevisions.kiki.audio.util.KikiAudioBoldTextView
