--- a/app/src/main/res/layout/fragment_genre_wise_songs.xml
+++ b/app/src/main/res/layout/fragment_genre_wise_songs.xml
@@ -6,6 +6,7 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/linearLayout3"
+        android:clickable="true"
         android:background="@color/customBlack1"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
