--- a/app/src/main/res/layout/item_horizontal_artist_list.xml
+++ b/app/src/main/res/layout/item_horizontal_artist_list.xml
@@ -102,6 +102,24 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"/>
 
+            <TextView
+                android:id="@+id/addArtistDisable"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:background="@drawable/confirm_background"
+                android:visibility="gone"
+                android:drawableStart="@drawable/ic_plus_music"
+                android:text="@string/add"
+                android:paddingEnd="@dimen/_10sdp"
+                android:textColor="@color/see_all"
+                android:textSize="@dimen/_16sdp"
+                style="@style/Smaller_Drawable"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"/>
+
+
 
             <View
         android:id="@+id/view_line2"
