--- a/app/src/main/res/layout/playlist_library_detail_list_items.xml
+++ b/app/src/main/res/layout/playlist_library_detail_list_items.xml
@@ -61,6 +61,20 @@
                 app:layout_constraintStart_toEndOf="@id/playlist_image"
                 app:layout_constraintTop_toBottomOf="@+id/textView_head"/>
 
+            <TextView
+                android:id="@+id/playlist_song_duration"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="00:00"
+                android:textColor="#FFFFFF"
+                android:gravity="center"
+                android:layout_marginStart="@dimen/_15sdp"
+                android:layout_marginTop="@dimen/_10sdp"
+                android:textSize="@dimen/_9sdp"
+                app:layout_constraintStart_toEndOf="@id/playlist_image"
+                app:layout_constraintTop_toBottomOf="@id/artist_text"/>
+
+
             <View
                 android:id="@+id/view_line2"
                 android:layout_width="0dp"
