--- a/app/src/main/res/layout/fragment_forgot_password_reset.xml
+++ b/app/src/main/res/layout/fragment_forgot_password_reset.xml
@@ -1,163 +1,178 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout
-    xmlns:bind="http://schemas.android.com/apk/res/android">
+<layout xmlns:bind="http://schemas.android.com/apk/res/android">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
+    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/linearLayout2"
-        android:background="@color/colorRegistrationBackgroud"
+        android:id="@+id/password_reset_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        >
-
-        <lk.mobilevisions.kiki.audio.util.KikiAudioBoldTextView
-            android:id="@+id/textView27"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginBottom="@dimen/_15sdp"
-            android:text="@string/enter_new_password"
-            android:textColor="@color/md_white_1000"
-            android:textSize="@dimen/_16sdp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/password_layout"/>
-
-
+        android:background="@color/colorRegistrationBackgroud">
 
         <RelativeLayout
-            android:id="@+id/password_layout"
-            android:layout_width="0dp"
+            android:id="@+id/back_btn_layout"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="42dp"
-            android:layout_marginEnd="42dp"
-            android:background="@drawable/rounded_background_mobile_number"
-            android:gravity="center"
-            android:layout_marginBottom="@dimen/_20sdp"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:paddingTop="@dimen/_5sdp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/confirm_password_layout"
-           >
+            app:layout_constraintTop_toTopOf="parent">
 
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/password_container"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:hintAnimationEnabled="false"
-                app:hintEnabled="false"
-                app:passwordToggleEnabled="true">
-
-                <lk.mobilevisions.kiki.audio.util.KikiMediumEditText
-                    android:id="@+id/password_edittext"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@null"
-                    android:ellipsize="end"
-                    android:hint="@string/type_new_password"
-                    android:inputType="textPassword"
-                    android:maxLines="1"
-                    android:padding="@dimen/_10sdp"
-                    android:singleLine="true"
-                    android:textColor="@color/md_white_1000"
-                    android:textSize="@dimen/_12sdp" />
-
-            </com.google.android.material.textfield.TextInputLayout>
+            <ImageView
+                android:id="@+id/btn_back"
+                android:layout_width="@dimen/_25sdp"
+                android:layout_height="@dimen/_25sdp"
+                android:layout_marginStart="8dp"
+                app:srcCompat="@drawable/ic_arrow_back" />
 
         </RelativeLayout>
 
-
         <RelativeLayout
-            android:id="@+id/confirm_password_layout"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/_20sdp"
-            android:layout_marginEnd="42dp"
-            android:layout_marginStart="42dp"
+            android:id="@+id/image_layout"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_180sdp"
+            android:layout_marginBottom="@dimen/_8sdp"
             android:gravity="center"
-            android:background="@drawable/rounded_background_mobile_number"
-            app:layout_constraintBottom_toTopOf="@+id/sign_up_layout"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent">
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/back_btn_layout">
 
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/confirm_password_container"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:passwordToggleEnabled="true"
-                app:hintAnimationEnabled="false"
-                app:hintEnabled="false">
-
-                <lk.mobilevisions.kiki.audio.util.KikiMediumEditText
-                    android:id="@+id/confirm_password_edittext"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@null"
-                    android:hint="@string/type_new_password_again"
-                    android:inputType="textPassword"
-                    android:padding="@dimen/_10sdp"
-                    android:singleLine="true"
-                    android:maxLines="1"
-                    android:ellipsize="end"
-                    android:textColor="@color/md_white_1000"
-                    android:textSize="@dimen/_12sdp" />
-
-            </com.google.android.material.textfield.TextInputLayout>
-
+            <ImageView
+                android:id="@+id/imageView31"
+                android:layout_width="@dimen/_100sdp"
+                android:layout_height="@dimen/_100sdp"
+                app:srcCompat="@drawable/ic_app_logo" />
 
         </RelativeLayout>
 
-
         <RelativeLayout
-            android:id="@+id/sign_up_layout"
-            android:layout_width="0dp"
+            android:id="@+id/text_layout"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="42dp"
-            android:layout_marginEnd="42dp"
-            android:layout_marginBottom="180dp"
-            android:background="@drawable/rounded_login_button1"
             android:gravity="center"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toStartOf="parent">
-
+            app:layout_constraintBottom_toTopOf="@id/bottom_layout"
+            app:layout_constraintTop_toBottomOf="@id/image_layout">
 
             <lk.mobilevisions.kiki.audio.util.KikiAudioBoldTextView
-                android:id="@+id/sign_up_textview"
+                android:id="@+id/textView27"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true"
-                android:padding="@dimen/_10sdp"
-                android:text="@string/confirm"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginBottom="@dimen/_15sdp"
+                android:text="@string/enter_new_password"
                 android:textColor="@color/md_white_1000"
-                android:textSize="@dimen/_14sdp" />
+                android:textSize="@dimen/_16sdp" />
 
 
         </RelativeLayout>
 
-        <ImageView
-            android:id="@+id/imageView31"
-            android:layout_width="@dimen/_100sdp"
-            android:layout_height="303dp"
-            app:srcCompat="@drawable/ic_app_logo"
+        <RelativeLayout
+            android:id="@+id/bottom_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toTopOf="@+id/textView27"/>
+            app:layout_constraintTop_toBottomOf="@id/text_layout">
+
+            <RelativeLayout
+                android:id="@+id/password_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="42dp"
+                android:layout_marginEnd="42dp"
+                android:layout_marginBottom="@dimen/_20sdp"
+                android:background="@drawable/rounded_background_mobile_number"
+                android:gravity="center">
+
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/password_container"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:hintAnimationEnabled="false"
+                    app:hintEnabled="false"
+                    app:passwordToggleEnabled="true">
+
+                    <lk.mobilevisions.kiki.audio.util.KikiMediumEditText
+                        android:id="@+id/password_edittext"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@null"
+                        android:ellipsize="end"
+                        android:hint="@string/type_new_password"
+                        android:imeOptions="actionNext"
+                        android:inputType="textPassword"
+                        android:maxLines="1"
+                        android:padding="@dimen/_10sdp"
+                        android:singleLine="true"
+                        android:textColor="@color/md_white_1000"
+                        android:textSize="@dimen/_12sdp" />
+
+                </com.google.android.material.textfield.TextInputLayout>
+
+            </RelativeLayout>
 
 
-        <ImageView
-            android:id="@+id/btn_back"
-            android:layout_width="@dimen/_25sdp"
-            android:layout_height="@dimen/_25sdp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/ic_arrow_back" />
+            <RelativeLayout
+                android:id="@+id/confirm_password_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/password_layout"
+                android:layout_marginStart="42dp"
+                android:layout_marginEnd="42dp"
+                android:layout_marginBottom="@dimen/_30sdp"
+                android:background="@drawable/rounded_background_mobile_number"
+                android:gravity="center">
 
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/confirm_password_container"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:hintAnimationEnabled="false"
+                    app:hintEnabled="false"
+                    app:passwordToggleEnabled="true">
+
+                    <lk.mobilevisions.kiki.audio.util.KikiMediumEditText
+                        android:id="@+id/confirm_password_edittext"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@null"
+                        android:ellipsize="end"
+                        android:hint="@string/type_new_password_again"
+                        android:imeOptions="actionDone"
+                        android:inputType="textPassword"
+                        android:maxLines="1"
+                        android:padding="@dimen/_10sdp"
+                        android:singleLine="true"
+                        android:textColor="@color/md_white_1000"
+                        android:textSize="@dimen/_12sdp" />
+
+                </com.google.android.material.textfield.TextInputLayout>
+
+
+            </RelativeLayout>
+
+
+            <RelativeLayout
+                android:id="@+id/confirm_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/confirm_password_layout"
+                android:layout_marginStart="42dp"
+                android:layout_marginEnd="42dp"
+                android:background="@drawable/rounded_login_button1"
+                android:gravity="center">
+
+
+                <lk.mobilevisions.kiki.audio.util.KikiAudioBoldTextView
+                    android:id="@+id/confirm_textview"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true"
+                    android:padding="@dimen/_10sdp"
+                    android:text="@string/confirm"
+                    android:textColor="@color/md_white_1000"
+                    android:textSize="@dimen/_14sdp" />
+
+            </RelativeLayout>
+
+        </RelativeLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
