--- a/app/src/main/res/layout/library_playlist_list_items.xml
+++ b/app/src/main/res/layout/library_playlist_list_items.xml
@@ -67,12 +67,12 @@
                 android:layout_width="wrap_content"
                 android:layout_height="@dimen/_17sdp"
                 android:background="@drawable/library_add_background"
-                android:text="@string/add_to_playlist"
                 android:drawableStart="@drawable/ic_add_green"
                 android:gravity="center"
                 android:visibility="visible"
+                android:paddingStart="@dimen/_15sdp"
+                android:paddingEnd="@dimen/_15sdp"
                 android:textColor="@color/colorPrimary"
-                android:textSize="@dimen/_10sdp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -83,11 +83,12 @@
                 android:layout_width="wrap_content"
                 android:layout_height="@dimen/_17sdp"
                 android:background="@drawable/viewall_background"
-                android:text="@string/added_to_playlist"
                 android:gravity="center"
                 android:visibility="gone"
+                android:drawableStart="@drawable/ic_library_added"
+                android:paddingStart="@dimen/_15sdp"
+                android:paddingEnd="@dimen/_15sdp"
                 android:textColor="@color/md_white_1000"
-                android:textSize="@dimen/_10sdp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
