--- a/app/src/main/res/drawable/ic_add_green.xml
+++ b/app/src/main/res/drawable/ic_add_green.xml
@@ -1,8 +1,9 @@
-<vector android:height="@dimen/_10sdp"
-    android:viewportHeight="42"
-    android:viewportWidth="42"
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="@dimen/_10sdp"
-    xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="@color/colorPrimary"
-        android:pathData="M42,20l-20,0l0,-20l-2,0l0,20l-20,0l0,2l20,0l0,20l2,0l0,-20l20,0z"/>
+    android:height="@dimen/_10sdp"
+    android:viewportWidth="42"
+    android:viewportHeight="42">
+    <path
+        android:fillColor="@color/colorPrimary"
+        android:pathData="M42,20l-20,0l0,-20l-2,0l0,20l-20,0l0,2l20,0l0,20l2,0l0,-20l20,0z" />
 </vector>
