--- a/app/src/main/res/layout/fragment_library_song_selection.xml
+++ b/app/src/main/res/layout/fragment_library_song_selection.xml
@@ -12,8 +12,13 @@
 
 
         <ScrollView
+            android:id="@+id/scroll_view"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="0dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent">
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -42,7 +47,7 @@
                     android:layout_marginEnd="@dimen/_6sdp"
                     android:layout_marginTop="@dimen/_6sdp"
                     android:layout_alignParentEnd="true"
-                    android:text="@string/confirm"
+                    android:text="@string/music_confirm"
                     android:textColor="#FFFFFF"
                     android:textSize="@dimen/_10sdp"
                     android:background="@drawable/viewall_background"/>
