--- a/app/src/main/res/layout/fragment_library_user_playlist_detail.xml
+++ b/app/src/main/res/layout/fragment_library_user_playlist_detail.xml
@@ -170,7 +170,7 @@
         <FrameLayout
             android:id="@+id/frame_container_userEdit_playlistTodetail"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="0dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
