--- a/app/src/main/res/layout/fragment_password_reset_mobile.xml
+++ b/app/src/main/res/layout/fragment_password_reset_mobile.xml
@@ -125,13 +125,15 @@
             android:layout_marginTop="16dp"
             android:layout_marginEnd="@dimen/_30sdp"
             android:textColor="#FFFFFF"
+            android:focusable="true"
+            android:focusableInTouchMode="true"
+            android:imeOptions="actionDone"
             android:background="@null"
             android:cursorVisible="false"
             android:gravity="center"
             android:maxLength="4"
             android:inputType="number"
             android:textSize="@dimen/_30sdp"
-            app:layout_constraintBottom_toBottomOf="@id/confirm_layout"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/show_username" />
