--- a/app/src/main/res/layout/fragment_reset_code_confirmation.xml
+++ b/app/src/main/res/layout/fragment_reset_code_confirmation.xml
@@ -51,7 +51,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="42dp"
-            android:layout_marginTop="72dp"
+            android:layout_marginTop="@dimen/_10sdp"
             android:layout_marginEnd="42dp"
             android:background="@drawable/rounded_background_mobile_number"
             android:focusable="true"
@@ -60,7 +60,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/enter_phone_number_textview">
+            app:layout_constraintTop_toBottomOf="@+id/reset_password_textview">
 
 
             <lk.mobilevisions.kiki.ui.widgets.countryselect.IntlPhoneInput
