--- a/app/src/main/res/layout/layout_audio_toolbar.xml
+++ b/app/src/main/res/layout/layout_audio_toolbar.xml
@@ -39,7 +39,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/ic_arrow_back" />
+            app:srcCompat="@drawable/ic_video_home_selected" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
