--- a/app/src/main/res/layout/playlist_list_items.xml
+++ b/app/src/main/res/layout/playlist_list_items.xml
@@ -92,8 +92,8 @@
                 android:layout_gravity="center"
                 android:background="@drawable/viewall_background"
                 android:drawableStart="@drawable/ic_plus_music"
-                android:text="@string/add"
-                android:paddingEnd="@dimen/_10sdp"
+                android:paddingStart="@dimen/_20sdp"
+                android:paddingEnd="@dimen/_20sdp"
                 android:textColor="@color/see_all"
                 android:textSize="@dimen/_16sdp"
                 style="@style/Smaller_Drawable"
