--- a/app/src/main/res/layout/activity_audio_profile.xml
+++ b/app/src/main/res/layout/activity_audio_profile.xml
@@ -54,7 +54,7 @@
                 android:text=""
                 android:singleLine="true"
                 android:textCursorDrawable="@null"
-                android:textColor="@color/audioSettingsTextColor"
+                android:textColor="@color/colorPrimary"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
