--- a/app/src/main/res/layout/fragment_forgot_password_reset.xml
+++ b/app/src/main/res/layout/fragment_forgot_password_reset.xml
@@ -166,7 +166,7 @@
                     android:layout_height="wrap_content"
                     android:layout_centerHorizontal="true"
                     android:padding="@dimen/_10sdp"
-                    android:text="@string/confirm"
+                    android:text="@string/music_confirm"
                     android:textColor="@color/md_white_1000"
                     android:textSize="@dimen/_14sdp" />
 
