--- a/app/src/main/res/layout/new_playlist_creation.xml
+++ b/app/src/main/res/layout/new_playlist_creation.xml
@@ -45,7 +45,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/_10sdp"
             android:layout_marginTop="@dimen/_6sdp"
-            android:text="Cancel"
+            android:text="@string/cancel"
             android:textSize="@dimen/_12sdp"
             android:textColor="@color/md_red_500"
             app:layout_constraintStart_toStartOf="parent"
@@ -85,7 +85,7 @@
             android:layout_marginTop="@dimen/_15sdp"
             android:textColor="@color/colorPrimary"
             android:textSize="@dimen/_12sdp"
-            android:text="(edit)"
+            android:text="@string/music_edit"
             app:layout_constraintStart_toEndOf="@id/edit_playlist_name"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@id/custom_playlist_image"/>
@@ -110,7 +110,8 @@
             android:layout_gravity="center"
             android:background="@drawable/viewall_background"
             android:drawableStart="@drawable/ic_plus_music"
-            android:text="Add Songs "
+            android:text="@string/add_songs"
+            android:paddingEnd="@dimen/_10sdp"
             android:textColor="@color/see_all"
             android:textSize="@dimen/_18sdp"
             style="@style/Smaller_Drawable"
